--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/fabric": "^5.3.10",
+    "@types/react-dropzone": "^4.2.2",
     "@types/uuid": "^10.0.0",
     "fabric": "^6.6.1",
+    "nanoid": "^5.1.5",
     "next": "15.2.4",
     "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
@@ -19,6 +22,7 @@
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-pdf": "^9.2.1",
+    "sass": "^1.86.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
